--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
 
         <ul class="contacts">
           <li class="item">
-            <a class="contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-info" href="mailto:info@devstudio.com"
+              ><svg class="icon-envelope" width="16" height="12"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a class="contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-info" href="tel:+380961111111"
+              ><svg class="icon-smartphone" width="10" height="16"><use href="./images/icons.svg#smartphone"></use></svg>+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -99,6 +103,24 @@
               <div class="team-text">
                 <h3 class="team-names">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
+                <div class="social-icons">
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -106,6 +128,24 @@
               <div class="team-text">
                 <h3 class="team-names">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
+                <div class="social-icons">
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -113,6 +153,24 @@
               <div class="team-text">
                 <h3 class="team-names">Микола Тарасов</h3>
                 <p class="team-position">Marketing</p>
+                <div class="social-icons">
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -120,7 +178,69 @@
               <div class="team-text">
                 <h3 class="team-names">Михайло Єрмаков</h3>
                 <p class="team-position">UI Designer</p>
+                <div class="social-icons">
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use></svg
+                  ></a>
+                  <a href="#" class="round-icon"
+                    ><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients-list">
+            <li class="bordered-icon">
+              <a href="#"
+                ><svg class="icon" width="106" height="60">
+                  <use href="./images/icons.svg#client1"></use></svg
+              ></a>
+            </li>
+            <li class="bordered-icon">
+              <a href="#"
+                ><svg class="icon" width="106" height="60">
+                  <use href="./images/icons.svg#client2"></use></svg
+              ></a>
+            </li>
+            <li class="bordered-icon">
+              <a href="#"
+                ><svg class="icon" width="106" height="60">
+                  <use href="./images/icons.svg#client3"></use></svg
+              ></a>
+            </li>
+            <li class="bordered-icon">
+              <a href="#"
+                ><svg class="icon" width="106" height="60">
+                  <use href="./images/icons.svg#client4"></use></svg
+              ></a>
+            </li>
+            <li class="bordered-icon">
+              <a href="#"
+                ><svg class="icon" width="106" height="60">
+                  <use href="./images/icons.svg#client5"></use></svg
+              ></a>
+            </li>
+            <li class="bordered-icon">
+              <a href="#"
+                ><svg class="icon" width="106" height="60">
+                  <use href="./images/icons.svg#client6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -129,22 +249,53 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-        <address class="footer-address">
-          <ul class="footer-contacts">
-            <li class="footer-item">
-              <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+        <div class="adress-block">
+          <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+          <address class="footer-address">
+            <ul class="footer-contacts">
+              <li class="footer-item">
+                <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h3 class="footer-social-title">Приєднуйтесь</h3>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use></svg
+              ></a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use></svg
+              ></a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
