--- a/portfolio.html
+++ b/portfolio.html
@@ -16,33 +16,37 @@
 </head>
 
 <body>
-  <header>
-    <div class="container">
-      <a class="logo" href="./index.html"><span>Web</span>Studio</a>
-      <nav>
-        <ul class="navigation">
+<header>
+      <div class="container">
+        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+        <nav>
+          <ul class="navigation">
+            <li class="item">
+              <a class="navigation-link" href="./index.html">Студія</a>
+            </li>
+            <li class="item">
+              <a class="navigation-link current" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="item">
+              <a class="navigation-link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="contacts">
           <li class="item">
-            <a class="navigation-link" href="./index.html">Студія</a>
+            <a class="contact-info" href="mailto:info@devstudio.com"
+              ><svg class="icon-envelope" width="16" height="12"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a class="navigation-link current" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="item">
-            <a class="navigation-link" href="#">Контакти</a>
+            <a class="contact-info" href="tel:+380961111111"
+              ><svg class="icon-smartphone" width="10" height="16"><use href="./images/icons.svg#smartphone"></use></svg>+38 096 111 11 11</a
+            >
           </li>
         </ul>
-      </nav>
-
-      <ul class="contacts">
-        <li class="item">
-          <a class="contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a class="contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </div>
-  </header>
+      </div>
+    </header>
 
   <main>
     <section class="section filter">
@@ -143,25 +147,56 @@
   </main>
 
   <footer class="footer">
-    <div class="container">
-      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-      <address class="footer-address">
-        <ul class="footer-contacts">
-          <li class="footer-item">
-            <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </div>
-  </footer>
+      <div class="container">
+        <div class="adress-block">
+          <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+          <address class="footer-address">
+            <ul class="footer-contacts">
+              <li class="footer-item">
+                <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h3 class="footer-social-title">Приєднуйтесь</h3>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="round-icon"
+                ><svg class="icon " width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 </body>
 
 </html>
