--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,9 @@
 
         <ul class="filtered-list">
             <li class="filtered-products">
-              <a class="filtered-link" href="#"><img src="./images/technocrack.jpg" alt="Technocrack web-site image"
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/technocrack.jpg" alt="Technocrack web-site image"
                   width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Технокряк</h3>
@@ -71,7 +73,9 @@
                 </div>
               </a>
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img
                   src="./images/neworlean-vs-goldenstar.jpg" alt="Poster New Orlean vs Golden Star" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Постер New Orlean vs Golden Star</h3>
@@ -80,7 +84,9 @@
               </a>
 
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/seafood.jpg"
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/seafood.jpg"
                   alt="Seafood app image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Ресторан Seafood</h3>
@@ -89,7 +95,9 @@
               </a>
 
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/prime.jpg"
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/prime.jpg"
                   alt="Prime project image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Проєкт Prime</h3>
@@ -97,7 +105,9 @@
                 </div>
             </li></a>
 
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/boxes.jpg"
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/boxes.jpg"
                   alt="Boxes project image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Проєкт Boxes</h3>
@@ -106,7 +116,9 @@
               </a>
 
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/inspiration.jpg"
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/inspiration.jpg"
                   alt="Inspiration has no Borders web-site image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Inspiration has no Borders</h3>
@@ -115,7 +127,9 @@
               </a>
 
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/limited-edition.jpg"
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/limited-edition.jpg"
                   alt="Limited Edition design image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Видання Limited Edition</h3>
@@ -124,7 +138,9 @@
               </a>
 
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/lab.jpg"
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/lab.jpg"
                   alt=" LAB project image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Проєкт LAB</h3>
@@ -133,7 +149,9 @@
               </a>
 
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/growing-business.jpg"
+            <li class="filtered-products"> <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <img src="./images/growing-business.jpg"
                   alt="" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Growing Business</h3>
