--- a/index.html
+++ b/index.html
@@ -107,31 +107,31 @@
                 <h3 class="team-names">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
                 <ul class="social-icons">
-                <li>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use></svg
-                  ></a>
-                </li>
-                <li>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use></svg
-                  ></a>
-                </li>
-                <li>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use></svg
-                  ></a>
-                </li>
-                <li>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use></svg
-                  ></a>
-                </li>
-              </ul>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -331,6 +331,18 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <form class="subscribe-form">
+            <label for="email" class="footer-label">Підпишіться на розсилку</label>
+            <input type="email" class="footer-input" placeholder="E-mail" />
+            <button type="submit" class="footer-button">
+              Підписатися
+              <svg class="footer-sub-icon" width="24" height="24">
+                <use href="./images/icons.svg#footer-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -339,8 +351,51 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-icon-button" data-modal-close>
-          <svg class="close-icon" width="30" height="30"></svg>
+          <svg class="close-icon" width="30" height="30">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
         </button>
+        <form class="form">
+          <h3 class="form-title">Залиште свої дані, ми вам передзвонимо</h3>
+          <ul class="form-list">
+            <li class="form-item">
+              <label class="form-lable" for="name">Ім'я</label>
+              <input class="form-input" type="text" name="name" id="name" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#form-name"></use>
+              </svg>
+            </li>
+            <li class="form-item">
+              <label class="form-lable" for="tel">Телефон</label>
+              <input class="form-input" type="text" name="tel" id="tel" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#form-tel"></use>
+              </svg>
+            </li>
+            <li class="form-item">
+              <label class="form-lable" for="email">Пошта</label>
+              <input class="form-input" type="email" name="email" id="email" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#form-email"></use>
+              </svg>
+            </li>
+            <li class="form-item">
+              <label class="form-lable" for="comment">Коментар</label>
+              <textarea class="form-input text-area" name="comment" id="comment" placeholder="Введіть текст"></textarea>
+            </li>
+            <li class="form-item">
+              <label for="policy" class="policy">
+                <input type="checkbox" class="checkbox" name="policy" id="policy" />
+                <svg class="checkbox-icon" width="16" height="15">
+                  <use href="./images/icons.svg#null-checkbox"></use>
+                </svg>
+                <span class="policy">Погоджуюся з розсилкою та приймаю&ensp;<a href="#">Умови договору</a></span>
+              </label>
+            </li>
+          </ul>
+
+          <button type="submit" class="submit-button">Відправити</button>
+        </form>
       </div>
     </div>
 
